# sbx

./: .gitignore
c/sbx1/: Makefile
c/sbx1/src/: main.c
js/sbx1/: index.html  script.js
python/myoptim/: pyproject.toml
python/myoptim/src/myo/: functions.py  viz.py
python/myoptim/src/myo/cli/: runner.py
python/myoptim/src/myo/optimizers/: __init__.py  botorch_opt.py  cmaes.py  scipy_opt.py
python/sbx1/: pyproject.toml
python/sbx1/src/sbx1/: definiteness.py  main.py
rust/sbx1/: Cargo.toml
rust/sbx1/src/: main.rs
