[project]
name = "myoptim"
version = "0.1.0"
description = "Optimizer playground against benchmark test functions"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "benchmark-functions>=1.1.4",
    "botorch>=0.18.1",
    "cma>=4.4.4",
    "numpy>=2.5.1",
    "plotly>=6.8.0",
    "pyvista>=0.48.4",
    "scipy>=1.18.0",
    "torch>=2.13.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/myo"]
